@@ -47,7 +47,9 @@ items:
     # inventory 
     inventory_status: 2 # 1|2|3|4|5|6|7|8 
     inventory_qty : 5 # Integer # Lagerbestand
-
+    delivery_period: 
+        - [4, 2013]
+        - [6, 2013]   # Lieferzeitraum von KW bis KW # optional 
     # Bestellmengen
     min_sale_qty: 1 # IntegerGtNull # ==  mindestbestellmenge, # optional # default 1
     max_sale_qty: 100 # IntegerGtNull # ==  höchstbestellmenge,  # optional # default 1000000
