@@ -5,6 +5,8 @@ Changelog
 ---
 
 
+- Item schema: added delivery_period (vors. Lieferzeitraum in KW)
+
 - Item schema: added max_sale_qty_without_verification (for X-Bestellungen)
 
 - Item schema: new __type__ "sortendetail_xbestellung_vpe", renamed
